# carver-demos

./: .gitignore  README.md  docker-compose.yml
policy-diffs/: .env.example  .gitignore  README.md  pyproject.toml
policy-diffs/config/: models.yaml
policy-diffs/credio-policies/: README.md
policy-diffs/docs/: blog-post-network-brand-rulebook.md  demo-video-brief.md
policy-diffs/pipeline/: change_record.py  classify.py  cli.py  config.py  diff.py  extract.py  fetch.py  llm.py  map_changes.py  orchestrator.py  pdf_render.py  propose.py
policy-diffs/presentation/: redline.py  render.py  yaml_diff.py
policy-diffs/prompts/: classify.txt  map.txt  propose.txt
policy-diffs/scripts/: brand_video.py  demo_script.py  make_overlay.py  mux_demo.py  record_demo.py  render_voiceover.py  smoke_v5_v6.sh
policy-diffs/tests/: test_change_record.py  test_classify.py  test_cli.py  test_config.py  test_credio_baseline.py  test_diff.py  test_extract.py  test_fetch.py  test_llm.py  test_map_changes.py  test_orchestrator.py  test_pdf_render.py  test_propose.py  test_redline.py  test_render.py  test_render_site.py  test_yaml_diff.py
pred-oracle/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
pred-oracle/data/: a0-pagination-probe.json  a0-pagination-probe.md  a0-prime-artifacts-probe.md  a3-topic-id-coverage.md  a6-field-population.md  a6-prime-field-population.md  a8-prime-wow-summary.md  a8-wow-summary.md  a9-choropleth-density.md  a9-prime-choropleth-density.md  alpha-curation.yml  beta-curation.yml  carver-categories.json  carver-topics.json  (+9 more)
(+400 files in other folders)
