[project]
name = "policy-diffs"
version = "0.1.0"
description = "Mastercard B2B rule-change → Acme Pay policy diff POC"
requires-python = ">=3.12"
dependencies = [
  "pymupdf>=1.24",
  "pdfplumber>=0.11",
  "openai>=1.40",
  "pyyaml>=6.0",
  "jinja2>=3.1",
  "redlines>=0.5",
  "markdown-it-py>=3.0",
  "pygments>=2.18",
  "requests>=2.32",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
