[project]
name = "pred-oracle"
version = "0.0.1"
description = "Pred-Oracle demo site"
requires-python = ">=3.10,<3.13"
dependencies = [
    "jinja2>=3.1.3",
    "markdown-it-py>=3.0.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "carver-feeds-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
    "openai>=1.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "beautifulsoup4>=4.12.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
